[FEATURE] Basic Home Page + New Pages + Updated Nav

--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,10 @@
     font-display: swap;
 }
 
-html, body { height: auto; }
+html, body{
+    height: auto;
+    overflow-x: hidden;
+}
 
 body{
     min-height: 100vh;
